--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "engines": {
+    "node": "19.x"
+  },
   "name": "nitrogen-15",
   "version": "1.0.0",
   "description": "Stratos Web Development Business Site",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index"
+    "start": "index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,4 +20,5 @@
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
+  
 }
